add homepage content with streamfields

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,2 +1,1 @@
-<p>home-page works!</p>
-<p>{{ (cmsData$ | async).title }}</p>
+<app-stream-field [streamFields]='(cmsData$ | async).body'></app-stream-field>
