add header component with dynamic menu

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,9 @@ html {
     bottom: 0;
     width: 100%;
   }
+
+/* Navbar
+-------------------------------------------------- */
+nav {
+  margin-bottom: 0.5em;
+}
